fix scrollbar

--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-}
-
 :root {
   --text-color: white;
   --bg-url: url(./assets/bg-mobile.jpg);
@@ -24,6 +18,12 @@
   --switch-bg-url: url(./assets/Sun.svg);
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background: var(--bg-url) no-repeat top center/cover;
   height: 100vh;
@@ -37,8 +37,8 @@ body * {
 #container {
   width: 100%;
   max-width: 588px;
-  margin: 56px auto 0px;
-  padding: 0 24px;
+  margin: 0px auto;
+  padding: 56px 24px 0;
 }
 
 #profile {
